# todo-listsadfbf265-7b53-4f13-9dad-ea1743d64d34

./: .env.example  README.md  backend_chat.sh  pyproject.toml  schema.prisma
.github/workflows/: deploy.yml
project/: createTask_service.py  createTodoList_service.py  create_log_service.py  deleteTask_service.py  deleteTodoList_service.py  delete_log_service.py  generate_token_service.py  getAllTodoLists_service.py  getTaskById_service.py  getTasks_service.py  getTodoList_service.py  getUserProfile_service.py  get_log_by_id_service.py  get_logs_by_user_service.py  invalidate_token_service.py  refresh_token_service.py  server.py  updateTask_service.py  updateTodoList_service.py  updateUserProfile_service.py
